--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: ./docker/php
     container_name: myspp
     volumes:
-      - ./src:/var/www/html:cached 
+      - ./src:/var/www/html:delegated
       - ./docker/php/php.ini:/usr/local/etc/php/conf.d/php.ini
     depends_on:
       - postgres
